flex-wrap fix

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
     -webkit-transition: all 0.1s ease;
     -moz-transition: all 0.1s ease;
     -o-transition: all 0.1s ease;
+    display: flex;
 }
 
 #headerRight {
@@ -135,8 +136,6 @@
     padding-top: 10px;
     padding-left: 15px;
     padding-right: 15px;
-    float: right;
-    max-width: calc(100% - 50px);
 }
 
 .appTitle > a {
